# synthetic_data_hands-on

./: .gitignore  README.md  main.py  pyproject.toml  test_mostlyai.py
.agent/rules/: marimo.md
.agents/rules/: project.md
docs/: mostlyai_local_issue_report.md
src/: data_loader.py
