[project]
name = "synthetic-data-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.9",
    "mostlyai[local]>=5.10.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "ucimlrepo>=0.0.7",
]
